--- a/ecci.inv.system/purchasing/Purchasing.Master
+++ b/ecci.inv.system/purchasing/Purchasing.Master
@@ -7,8 +7,6 @@
     <title>
         <asp:ContentPlaceHolder ID="title" runat="server"></asp:ContentPlaceHolder>
     </title>
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
     <link rel="stylesheet" href="../assets/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
   <!-- Font Awesome -->  
   <link rel="stylesheet" href="../assets/bower_components/font-awesome/css/font-awesome.min.css"/>
@@ -122,47 +120,14 @@
             $('.alert-error').hide();
         });
     </script>
+    
   <%--  
   <script type="text/javascript">
     $(document).ready(function() {
         $('#manageTable').DataTable();
     });
   </script>--%>
-   <script type="text/javascript">  
-     $(document).ready(function () {  
-         $.ajax({  
-             type: "POST",  
-             dataType: "json",  
-             url: "..//PurchaseOrderService.asmx/GetPurchaseOrder",
-             success: function (data) {
-                 var datatableVariable = $('#manageTable').DataTable({
-                     data: data,
-                     columns: [
-                         { 'data': 'purchaseOrder' },
-                         { 'data': 'suppName' },
-                         { 'data': 'brandName' },
-                         { 'data': 'quantity'
-                             //'data': 'feesPaid', 'render': function (feesPaid) {
-                             //    return ' ' + feesPaid;
-                             //}
-                         },
-                         { 'data': 'purchaseDate' },
-                         { 'data': 'deliverDate' },
-                         { 'data': 'poStatus' }
-                         //{
-                         //    'data': 'dateOfBirth', 'render': function (date) {
-                         //        var date = new Date(parseInt(date.substr(6)));
-                         //        var month = date.getMonth() + 1;
-                         //        return date.getDate() + "/" + month + "/" + date.getFullYear();
-                         //    }
-                         //}
-                     ]
-                 });
-             }
-        });  
-  
-  });  
- </script>  
+   
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -280,5 +245,6 @@
     <!-- /.sidebar -->
   </aside>
   </form>
+    <asp:ContentPlaceHolder ID="heading" runat="server"></asp:ContentPlaceHolder>
 </body>
 </html>
