--- a/ecci.inv.system/purchasing/Purchasing.Master
+++ b/ecci.inv.system/purchasing/Purchasing.Master
@@ -212,7 +212,7 @@
                   <li id="addItemsNav"><a href="items.aspx"><i class="fa fa-plus"></i> Add Items</a></li>
 <%--                <?php endif; ?>
                 <?php if(in_array('updateGroup', $user_permission) || in_array('viewGroup', $user_permission) || in_array('deleteGroup', $user_permission)): ?>--%>
-                <li id="manageItemsNav"><a href="manageitem.aspx"><i class="fa fa-circle-o"></i> Manage Items</a></li>
+                <li id="manageItemsNav"><a href="manageitems.aspx"><i class="fa fa-circle-o"></i> Manage Items</a></li>
 <%--                <?php endif; ?>--%>
               </ul>
             </li>
