Change jquery parameters

--- a/ecci.inv.system/purchasing/Purchasing.Master
+++ b/ecci.inv.system/purchasing/Purchasing.Master
@@ -51,9 +51,9 @@
   <!-- Google Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic"/>
   <!-- jQuery 3 -->
-  <script src="../assets/bower_components/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src='<%= Url.Content("../assets/bower_components/jquery/dist/jquery.min.js") %>'></script>
   <!-- jQuery UI 1.11.4 -->
-  <script src="../assets/bower_components/jquery-ui/jquery-ui.min.js"></script>
+  <script type="text/javascript" src='<%= Url.Content("../assets/bower_components/jquery-ui/jquery-ui.min.js") %>'></script>
   <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
   <script>
     $.widget.bridge('uibutton', $.ui.button);
