redirecting to the right folder

--- a/ecci.inv.system/purchasing/Purchasing.Master
+++ b/ecci.inv.system/purchasing/Purchasing.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Purchasing.Master.cs" Inherits="ecci.inv.system.Purchasing" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Purchasing.Master.cs" Inherits="ecci.inv.system.purchasing.Purchasing" %>
 
 <!DOCTYPE html>
 
