--- a/ecci.inv.system/superadmin/Superadmin.Master
+++ b/ecci.inv.system/superadmin/Superadmin.Master
@@ -7,97 +7,102 @@
     <title>
         <asp:ContentPlaceHolder ID="title" runat="server"></asp:ContentPlaceHolder>
     </title>
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
-    <link rel="stylesheet" href="../assets/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
-  <!-- Font Awesome -->  
-  <link rel="stylesheet" href="../assets/bower_components/font-awesome/css/font-awesome.min.css"/>
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="../assets/bower_components/Ionicons/css/ionicons.min.css"/>
-  <!-- Theme style -->
-  <link rel="stylesheet" href="../assets/dist/css/AdminLTE.min.css"/>
-  <!-- AdminLTE Skins. Choose a skin from the css/skins
+    <link rel="stylesheet" href="../assets/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="../assets/bower_components/font-awesome/css/font-awesome.min.css" />
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="../assets/bower_components/Ionicons/css/ionicons.min.css" />
+    <!-- Theme style -->
+    <link rel="stylesheet" href="../assets/dist/css/AdminLTE.min.css" />
+    <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
-  <link rel="stylesheet" href="../assets/dist/css/skins/_all-skins.min.css"/>
-  <!-- Morris chart -->
-  <link rel="stylesheet" href="../assets/bower_components/morris.js/morris.css"/>
-  <!-- jvectormap -->
-  <link rel="stylesheet" href="../assets/bower_components/jvectormap/jquery-jvectormap.css="/>
-  <!-- Date Picker -->
-  <link rel="stylesheet" href="../assets/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css"/>
-  <!-- Daterange picker -->  
-  <link rel="stylesheet" href="../assets/bower_components/bootstrap-daterangepicker/daterangepicker.css"/>
-  <!-- bootstrap wysihtml5 - text editor -->
-  <link rel="stylesheet" href="../assets/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css"/>
-  <link rel="stylesheet" href="../assets/bower_components/datatables.net-bs/css/dataTables.bootstrap.min.css"/>
-  <!-- Select2 -->
-  <link rel="stylesheet" href="../assets/bower_components/select2/dist/css/select2.min.css"/>
-  <link rel="stylesheet" href="../assets/plugins/fileinput/fileinput.min.css"/>
+    <link rel="stylesheet" href="../assets/dist/css/skins/_all-skins.min.css" />
+    <!-- Morris chart -->
+    <link rel="stylesheet" href="../assets/bower_components/morris.js/morris.css" />
+    <!-- jvectormap -->
+    <link rel="stylesheet" href="../assets/bower_components/jvectormap/jquery-jvectormap.css" />
+    <!-- Date Picker -->
+    <link rel="stylesheet" href="../assets/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css" />
+    <!-- Daterange picker -->
+    <link rel="stylesheet" href="../assets/bower_components/bootstrap-daterangepicker/daterangepicker.css" />
+    <!-- bootstrap wysihtml5 - text editor -->
+    <link rel="stylesheet" href="../assets/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css" />
+    <link rel="stylesheet" href="../assets/bower_components/datatables.net-bs/css/dataTables.bootstrap.min.css" />
+    <!-- Select2 -->
+    <link rel="stylesheet" href="../assets/bower_components/select2/dist/css/select2.min.css" />
+    <link rel="stylesheet" href="../assets/plugins/fileinput/fileinput.min.css" />
     <link href="../css/CustomStyle.css" rel="stylesheet" />
-  <!-- icheck -->
-  <!-- iCheck for checkboxes and radio inputs -->
-  <link rel="stylesheet" href="../assets/plugins/iCheck/all.css"/>
+    <!-- icheck -->
+    <!-- iCheck for checkboxes and radio inputs -->
+    <link rel="stylesheet" href="../assets/plugins/iCheck/all.css" />
+    <%--    
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.18/css/dataTables.bootstrap.min.css"/>
+  <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.2/css/responsive.bootstrap.min.css"/>--%>
 
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 
-  <!-- Google Font -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic"/>
+    <!-- Google Font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic" />
+    <!-- jQuery 3 -->
+    <script src="../assets/bower_components/jquery/dist/jquery.min.js"></script>
+    <!-- jQuery UI 1.11.4 -->
+    <script src="../assets/bower_components/jquery-ui/jquery-ui.min.js"></script>
+    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+    <script>
+        $.widget.bridge('uibutton', $.ui.button);
+    </script>
+    <!-- Bootstrap 3.3.7 -->
+    <script src="../assets/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- Morris.js charts -->
+    <script src="../assets/bower_components/raphael/raphael.min.js"></script>
+    <script src="../assets/bower_components/morris.js/morris.min.js"></script>
+    <!-- Sparkline -->
+    <script src="../assets/bower_components/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
+    <!-- jvectormap -->
+    <script src="../assets/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
+    <script src="../assets/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+    <!-- jQuery Knob Chart -->
+    <script src="../assets/bower_components/jquery-knob/dist/jquery.knob.min.js"></script>
+    <!-- daterangepicker -->
+    <script src="../assets/bower_components/moment/min/moment.min.js"></script>
+    <script src="../assets/bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
+    <!-- datepicker -->
+    <script src="../assets/bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+    <!-- Bootstrap WYSIHTML5 -->
+    <script src="../assets/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
+    <!-- Slimscroll -->
+    <script src="../assets/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+    <!-- FastClick -->
+    <script src="../assets/bower_components/fastclick/lib/fastclick.js"></script>
+    <!-- Select2 -->
+    <script src="../assets/bower_components/select2/dist/js/select2.full.min.js"></script>
+    <!-- AdminLTE App -->
+    <script src="../assets/dist/js/adminlte.min.js"></script>
+    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+    <script src="../assets/dist/js/pages/dashboard.js"></script>
+    <!-- AdminLTE for demo purposes -->
+    <script src="../assets/dist/js/demo.js"></script>
+    <script src="../assets/plugins/fileinput/fileinput.min.js"></script>
 
-  <!-- jQuery 3 -->
-  <script src="../assets/bower_components/jquery/dist/jquery.min.js"></script>
-  <!-- jQuery UI 1.11.4 -->
-  <script src="../assets/bower_components/jquery-ui/jquery-ui.min.js"></script>
-  <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-  <script>
-    $.widget.bridge('uibutton', $.ui.button);
-  </script>
-  <!-- Bootstrap 3.3.7 -->
-  <script src="../assets/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <!-- Morris.js charts -->
-  <script src="../assets/bower_components/raphael/raphael.min.js"></script>
-  <script src="../assets/bower_components/morris.js/morris.min.js"></script>
-  <!-- Sparkline -->
-  <script src="../assets/bower_components/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
-  <!-- jvectormap -->
-  <script src="../assets/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-  <script src="../assets/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
-  <!-- jQuery Knob Chart -->
-  <script src="../assets/bower_components/jquery-knob/dist/jquery.knob.min.js"></script>
-  <!-- daterangepicker -->
-  <script src="../assets/bower_components/moment/min/moment.min.js"></script>
-  <script src="../assets/bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
-  <!-- datepicker -->
-  <script src="../assets/bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
-  <!-- Bootstrap WYSIHTML5 -->
-  <script src="../assets/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
-  <!-- Slimscroll -->
-  <script src="../assets/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
-  <!-- FastClick -->
-  <script src="../assets/bower_components/fastclick/lib/fastclick.js"></script>
-  <!-- Select2 -->
-  <script src="../assets/bower_components/select2/dist/js/select2.full.min.js"></script>
-  <!-- AdminLTE App -->  
-  <script src="../assets/dist/js/adminlte.min.js"></script>
-  <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <script src="../assets/dist/js/pages/dashboard.js"></script>
-  <!-- AdminLTE for demo purposes -->
-  <script src="../assets/dist/js/demo.js"></script>
-  <script src="../assets/plugins/fileinput/fileinput.min.js"></script>
+    <!-- ChartJS -->
+    <script src="../assets/bower_components/Chart.js/Chart.js"></script>
 
-  <!-- ChartJS -->
-  <script src="../assets/bower_components/Chart.js/Chart.js"></script>
+    <!-- icheck -->
+    <script src="../assets/plugins/iCheck/icheck.min.js"></script>
 
-  <!-- icheck -->
-  <script src="../assets/plugins/iCheck/icheck.min.js'"></script>
+    <!-- DataTables -->
+    <script src="../assets/bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="../assets/bower_components/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
 
-  <!-- DataTables -->
-<script src="../assets/bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
-<script src="../assets/bower_components/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
+
+    <asp:ContentPlaceHolder ID="heading" runat="server"></asp:ContentPlaceHolder>
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -117,7 +122,7 @@
                     <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
                         <span class="sr-only">Toggle navigation</span>
                     </a>
-                    <div style="text-align:right">
+                    <div style="text-align: right">
                         <asp:Label ID="lblEmpno" runat="server" Text="Label" CssClass="text-bold"></asp:Label>
                     </div>
                 </nav>
@@ -158,6 +163,31 @@
                             <li id="manageUserNav"><a href="#"><i class="fa fa-circle-o"></i>Manage Users</a></li>
                         </ul>
                     </li>
+                    <li class="treeview" id="mainSupNav">
+                        <a href="#"><i class="fa fa-users"></i>
+                            <span>Supplier</span>
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </span>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li id="addSupNav"><a href="supplier.aspx"><i class="fa fa-plus"></i>Add Supplier</a></li>
+                            <li id="manageSupNav"><a href="managesuppliers.aspx"><i class="fa fa-circle-o"></i>Manage Supplier</a></li>
+                        </ul>
+                    </li>
+                    <li class="treeview" id="mainItemNav">
+                        <a href="#">
+                            <i class="fa fa-files-o"></i>
+                            <span>Items</span>
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </span>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li id="addItemsNav"><a href="items.aspx"><i class="fa fa-plus"></i>Add Items</a></li>
+                            <li id="manageItemsNav"><a href="manageitems.aspx"><i class="fa fa-circle-o"></i>Manage Items</a></li>
+                        </ul>
+                    </li>
                     <%--<li class="treeview" id="mainGroupNav">
                         <a href="#">
                             <i class="fa fa-files-o"></i>
@@ -181,7 +211,7 @@
                     <li><a href="#"><i class="fa fa-user-o"></i><span>Profile</span></a></li>
 
                     <!-- user permission info -->
-                    <li><a href="~/logout.aspx" runat="server"><i class="glyphicon glyphicon-log-out"></i> <span>Logout</span></a></li>
+                    <li><a href="~/logout.aspx" runat="server"><i class="glyphicon glyphicon-log-out"></i><span>Logout</span></a></li>
 
                 </ul>
             </section>
