--- a/ecci.inv.system/purchasing/Purchasing.Master
+++ b/ecci.inv.system/purchasing/Purchasing.Master
@@ -86,7 +86,7 @@
     <!-- AdminLTE App -->
     <script src="../assets/dist/js/adminlte.min.js"></script>
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="../assets/dist/js/pages/dashboard.js"></script>
+    <%--<script src="../assets/dist/js/pages/dashboard.js"></script>--%>
     <!-- AdminLTE for demo purposes -->
     <script src="../assets/dist/js/demo.js"></script>
     <script src="../assets/plugins/fileinput/fileinput.min.js"></script>
