--- a/ecci.inv.system/purchasing/Purchasing.Master
+++ b/ecci.inv.system/purchasing/Purchasing.Master
@@ -62,7 +62,7 @@
     <script src="../assets/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- Morris.js charts -->
     <script src="../assets/bower_components/raphael/raphael.min.js"></script>
-    <script src="../assets/bower_components/morris.js/morris.min.js"></script>
+    <%--<script src="../assets/bower_components/morris.js/morris.min.js"></script>--%>
     <!-- Sparkline -->
     <script src="../assets/bower_components/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
     <!-- jvectormap -->
@@ -86,7 +86,7 @@
     <!-- AdminLTE App -->
     <script src="../assets/dist/js/adminlte.min.js"></script>
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="../assets/dist/js/pages/dashboard.js"></script>
+    <%--<script src="../assets/dist/js/pages/dashboard.js"></script>--%>
     <!-- AdminLTE for demo purposes -->
     <script src="../assets/dist/js/demo.js"></script>
     <script src="../assets/plugins/fileinput/fileinput.min.js"></script>
